@@ -4,6 +4,8 @@ import java.lang.management.ManagementFactory;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import com.google.protobuf.ByteString;
 import com.robomotion.app.RunnerGrpc.RunnerBlockingStub;
@@ -12,6 +14,7 @@ import com.robomotion.app.RunnerProto.DetachRequest;
 import com.robomotion.app.RunnerProto.Null;
 import com.robomotion.app.RunnerProto.RobotNameResponse;
 
+import org.apache.commons.lang3.SystemUtils;
 import org.jutils.jprocesses.JProcesses;
 import org.jutils.jprocesses.model.ProcessInfo;
 
@@ -45,7 +48,15 @@ public class Debug {
 		AttachConfig cfg = new AttachConfig(ProtocolGRPC, gAddr, pid, ns);
 
 		byte[] cfgData = Runtime.Serialize(cfg);
-		attachedTo = GetRPCAddr();
+		
+		try {
+			attachedTo = GetRPCAddr();
+		}
+		catch (Exception e) {
+			System.out.println(e.toString());
+			System.exit(0);
+		}
+
 		if (attachedTo.isEmpty()) {
 			System.out.println("empty gRPC address");
 			System.exit(0);
@@ -73,7 +84,7 @@ public class Debug {
 		channel.shutdownNow();
 	}
 
-	private static String GetRPCAddr() {
+	private static String GetRPCAddr() throws Exception {
 		List<SockTabEntry> tabs = GetNetStatPorts(State.LISTENING, "robomotion-runner");
 		switch (tabs.size()) {
 			case 0:
@@ -124,12 +135,31 @@ public class Debug {
 		LAST_ACK, TIME_WAIT, DELETE_TCB,
 	}
 
-	private static String[] states = {
+	private static String[] statesWin = {
 			"UNKNOWN", "", "LISTENING", "SYN_SENT", "SYN_RECV", "ESTABLISHED", "FIN_WAIT1", "FIN_WAIT2", "CLOSE_WAIT",
 			"CLOSING", "LAST_ACK", "TIME_WAIT", "DELETE_TCB",
 	};
 
-	public static List<SockTabEntry> GetNetStatPorts(State state, String processName) {
+	private static String[] statesUnix = {
+			"UNKNOWN", "CLOSED", "LISTEN", "SYN_SENT", "SYN_RECV", "ESTABLISHED", "FIN_WAIT1", "FIN_WAIT2", "CLOSE_WAIT",
+			"CLOSING", "LAST_ACK", "TIME_WAIT", "DELETE_TCB",
+	};
+
+	public static List<SockTabEntry> GetNetStatPorts(State state, String processName) throws Exception {
+		if (SystemUtils.IS_OS_WINDOWS) {
+			return getNetStatPortsWin(state, processName);
+		}
+		else if (SystemUtils.IS_OS_UNIX) {
+			return getNetStatPortsUnix(state, processName);
+		}
+		else if (SystemUtils.IS_OS_MAC) {
+			return getNetStatPortsDarwin(state, processName);
+		}
+
+		throw new Exception("OS is not supported");
+	}
+
+	private static List<SockTabEntry> getNetStatPortsWin(State state, String processName) {
 		List<SockTabEntry> tabs = new ArrayList<SockTabEntry>();
 
 		try {
@@ -154,13 +184,124 @@ public class Debug {
 					continue;
 
 				String pid = tokens[5];
-				List<ProcessInfo> procs = processList.stream().filter(p -> p.getPid().compareTo(pid) == 0).toList();
+				List<ProcessInfo> procs = processList.stream().filter(p -> p.getPid().compareTo(pid) == 0).collect(Collectors.toList());
 
 				if (tokens.length > 4 && tokens[1].compareTo("TCP") == 0 &&
-						tokens[4].compareTo(states[state.ordinal()]) == 0 &&
+						tokens[4].compareTo(statesWin[state.ordinal()]) == 0 &&
 						procs.size() > 0) {
 
 					String localAddr = tokens[2];
+					tabs.add(new SockTabEntry() {
+						{
+							process = procs.get(0);
+							localAddress = localAddr;
+						}
+					});
+				}
+			}
+
+		} catch (Exception ex) {
+			System.out.println(ex.toString());
+		}
+
+		return tabs;
+	}
+
+	private static List<SockTabEntry> getNetStatPortsUnix(State state, String processName) {
+		List<SockTabEntry> tabs = new ArrayList<SockTabEntry>();
+
+		try {
+			Process process = java.lang.Runtime.getRuntime()
+					.exec(new String[] { "netstat", "-a", "-n", "-o", "-p", "tcp" });
+			Scanner sc = new Scanner(process.getInputStream(), "IBM850");
+			sc.useDelimiter("\\A");
+			String content = sc.next();
+			sc.close();
+
+			JProcesses jp = JProcesses.get();
+			jp.fastMode(true);
+
+            if (processName.length() > 15) {
+                processName = processName.substring(0, 15);
+            }
+
+			List<ProcessInfo> processList = jp.listProcesses(processName);
+			String[] rows = content.split("\n");
+
+			for (String row : rows) {
+				if (row.isEmpty())
+					continue;
+
+				String[] tokens = row.split("\\s+");
+				if (tokens.length <= 7)
+					continue;
+
+				String[] pidStr = tokens[6].split("/");
+				if (pidStr.length == 0) {
+					continue;
+				}
+
+				String pid = pidStr[0];
+				List<ProcessInfo> procs = processList.stream().filter(p -> p.getPid().compareTo(pid) == 0).collect(Collectors.toList());
+
+				if (tokens[0].compareTo("tcp") == 0 &&
+						tokens[5].compareTo(statesUnix[state.ordinal()]) == 0 &&
+						procs.size() > 0) {
+
+					String localAddr = tokens[3];
+					tabs.add(new SockTabEntry() {
+						{
+							process = procs.get(0);
+							localAddress = localAddr;
+						}
+					});
+				}
+			}
+
+		} catch (Exception ex) {
+			System.out.println(ex.toString());
+		}
+
+		return tabs;
+	}
+
+	private static List<SockTabEntry> getNetStatPortsDarwin(State state, String processName) {
+		List<SockTabEntry> tabs = new ArrayList<SockTabEntry>();
+
+		try {
+			Process process = java.lang.Runtime.getRuntime()
+					.exec(new String[] { "netstat", "-a", "-n", "-v", "-p", "tcp" });
+			Scanner sc = new Scanner(process.getInputStream(), "IBM850");
+			sc.useDelimiter("\\A");
+			String content = sc.next();
+			sc.close();
+
+			JProcesses jp = JProcesses.get();
+			jp.fastMode(true);
+
+            if (processName.length() > 15) {
+                processName = processName.substring(0, 15);
+            }
+
+			List<ProcessInfo> processList = jp.listProcesses(processName);
+			String[] rows = content.split("\n");
+
+			for (String row : rows) {
+				if (row.isEmpty())
+					continue;
+
+				String[] tokens = row.split("\\s+");
+				if (tokens.length <= 10)
+					continue;
+
+				String pid = tokens[8];
+				List<ProcessInfo> procs = processList.stream().filter(p -> p.getPid().compareTo(pid) == 0).collect(Collectors.toList());
+
+				if (tokens[0].compareTo("tcp4") == 0 &&
+						tokens[5].compareTo(statesUnix[state.ordinal()]) == 0 &&
+						procs.size() > 0) {
+
+					String localAddr = tokens[3];
 					tabs.add(new SockTabEntry() {
 						{
 							process = procs.get(0);
